# CodeLens

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Editor/: Editor.cpp  Editor.h
src/Platform/: Compatibility.h  Platform.h  Window.h
src/Platform/Windows/: Win32.h  WinPlatform.cpp  WinWindow.cpp
src/UI/: UI.cpp  UI.h
